# true_commerce_triage_agent

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agents/: __init__.py  _model.py  classification_agent.py  orchestrator_agent.py  remediation_agent.py
app/api/: triage.py
app/classifier/: __init__.py  classification_llm.py  ml_stub.py  protocol.py  rule_based.py
app/contracts/: __init__.py  triage.py
app/core/: __init__.py  circuit_breaker.py
app/executor/: __init__.py  triage_executor.py
app/orchestrator/: __init__.py  triage_orchestrator.py
app/planner/: __init__.py  triage_planner.py
app/remediation/: __init__.py  rag_mock.py  remediation_llm.py
app/services/: __init__.py  triage_service.py
docs/: CI_CD_STRATEGY.md  EVALUATION.md  EXTENDING_THE_SYSTEM.md  HANDOFF_CHECKLIST.md  LOCAL_SETUP.md  OBSERVABILITY.md  PROBLEM_BREAKDOWN_TEMPLATE.md  RAG_ARCHITECTURE.md  README.md  READ_THIS_FIRST.md  SECURITY_AND_SAFETY.md  TEST_HARNESS.md  architecture.md  decisions.md  index.md  load_testing.md
docs/breakdowns/: 0001-example-anomaly-resolution.md  0002-intelligent-event-triage.md  README.md
eval/promptfoo/: promptfooconfig.yaml  runner.py
scripts/: INTERNAL_ONLY_EXCLUDE.txt  README.md  post_triage.sh  run_api.sh  run_api_tests.sh  test_data_batch1.json  test_data_batch2.json  test_data_input.json
tests/: __init__.py  conftest.py  fixtures.py  stubs.py  test_agents.py  test_circuit_breaker.py  test_classifier.py  test_orchestrator.py  test_planner.py  test_triage_api.py
(+2 files in other folders)
