[project]
name = "true-commerce-triage-agent"
version = "0.1.0"
description = "Intelligent event monitoring and triage for True Commerce (multi-tenant)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "litellm>=1.0",
    "tenacity>=9.0",
    "httpx>=0.27.0",
    "pydantic-ai>=0.0.18",
    "pydantic-ai-litellm>=0.0.6",
    "logfire[fastapi]>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError"]
show_missing = true
